<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- <include layout = "@layout/activity_registration_success"/> -->

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edittextorigine"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding20"
        android:layout_marginTop="@dimen/padding30"
        android:layout_marginEnd="@dimen/padding20"
        android:background="@drawable/textinputborder"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:hint="@string/hint_origine"
        android:inputType="text"
        android:paddingStart="@dimen/padding20"
        android:paddingTop="@dimen/padding10"
        android:paddingEnd="@dimen/padding20"
        android:paddingBottom="@dimen/padding10"
        android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
        android:textSize="@dimen/size20text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edittextdestinazione"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding20"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="@dimen/padding20"
        android:background="@drawable/textinputborder"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:hint="@string/hint_destinazione"
        android:inputType="text"
        android:paddingStart="@dimen/padding20"
        android:paddingTop="@dimen/padding10"
        android:paddingEnd="@dimen/padding20"
        android:paddingBottom="@dimen/padding10"
        android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
        android:textSize="@dimen/size20text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edittextorigine" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edittextandata"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding20"
        android:layout_marginTop="@dimen/padding20"
        android:layout_marginEnd="@dimen/padding5"
        android:background="@drawable/textinputborder"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:hint="@string/hint_andata"
        android:paddingStart="@dimen/padding10"
        android:paddingTop="@dimen/padding10"
        android:paddingEnd="@dimen/padding5"
        android:paddingBottom="@dimen/padding10"
        android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
        android:textSize="@dimen/size20text"
        app:layout_constraintEnd_toStartOf="@id/edittextritorno"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edittextdestinazione" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edittextritorno"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding5"
        android:layout_marginTop="@dimen/padding20"
        android:layout_marginEnd="@dimen/padding20"
        android:background="@drawable/textinputborder"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:hint="@string/hint_ritorno"
        android:paddingStart="@dimen/padding10"
        android:paddingTop="@dimen/padding10"
        android:paddingEnd="@dimen/padding5"
        android:paddingBottom="@dimen/padding10"
        android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
        android:textSize="@dimen/size20text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/edittextandata"
        app:layout_constraintTop_toBottomOf="@id/edittextdestinazione" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/npasseggeriedittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:background="@drawable/textinputborder"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:gravity="center_horizontal"
        android:hint="@string/npasseggeri"
        android:inputType="number"
        android:paddingStart="@dimen/padding10"
        android:paddingTop="@dimen/padding10"
        android:paddingEnd="@dimen/padding10"
        android:paddingBottom="@dimen/padding10"
        android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
        android:textSize="@dimen/size20text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edittextandata" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/plusbutton"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding20"
        android:layout_marginTop="@dimen/padding30"
        android:background="@drawable/round_button"
        android:backgroundTint="@color/grey_app"
        android:text="@string/piu"
        android:textSize="@dimen/size20text"
        app:layout_constraintStart_toEndOf="@id/npasseggeriedittext"
        app:layout_constraintTop_toBottomOf="@id/edittextritorno" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/minusbutton"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding30"
        android:layout_marginEnd="@dimen/padding20"
        android:background="@drawable/round_button"
        android:text="@string/meno"
        android:textSize="@dimen/size20text"
        app:layout_constraintEnd_toStartOf="@id/npasseggeriedittext"
        app:layout_constraintTop_toBottomOf="@id/edittextritorno" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cercavolibutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/padding40"
        android:layout_marginBottom="@dimen/padding20"
        android:enabled="false"
        android:padding="@dimen/padding15"
        android:text="@string/cercavoli"
        android:textColor="@color/white"
        android:textSize="@dimen/size20text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>