<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingVertical="@dimen/padding10">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/passeggeroText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding20"
        android:layout_marginTop="@dimen/padding10"
        android:gravity="center_horizontal"
        android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
        android:textSize="@dimen/size24text"
        app:layout_constraintBottom_toTopOf="@id/editTextNome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/passeggero" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editTextNome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding20"
        android:layout_marginTop="@dimen/padding20"
        android:layout_marginEnd="@dimen/padding20"
        android:background="@drawable/textinputborder"
        android:hint="@string/nome"
        android:paddingStart="@dimen/padding20"
        android:paddingTop="@dimen/padding10"
        android:paddingEnd="@dimen/padding20"
        android:paddingBottom="@dimen/padding10"
        android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
        android:textSize="@dimen/size20text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passeggeroText"
        android:imeOptions="actionNext"
        android:maxLines="1"
        android:inputType="text"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editTextCognome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding20"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="@dimen/padding20"
        android:background="@drawable/textinputborder"
        android:hint="@string/cognome"
        android:paddingStart="@dimen/padding20"
        android:paddingTop="@dimen/padding10"
        android:paddingEnd="@dimen/padding20"
        android:paddingBottom="@dimen/padding10"
        android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
        android:textSize="@dimen/size20text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextNome"
        android:imeOptions="actionNext"
        android:maxLines="1"
        android:inputType="text"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editTextDocumento"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding20"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="@dimen/padding20"
        android:background="@drawable/textinputborder"
        android:hint="@string/numero_documento"
        android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
        android:paddingStart="@dimen/padding20"
        android:paddingTop="@dimen/padding10"
        android:paddingEnd="@dimen/padding20"
        android:paddingBottom="@dimen/padding10"
        android:textSize="@dimen/size20text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextCognome"
        android:imeOptions="actionNext"
        android:maxLines="1"
        android:inputType="text"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editTextIndirizzo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding20"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="@dimen/padding20"
        android:background="@drawable/textinputborder"
        android:hint="@string/indirizzo"
        android:paddingStart="@dimen/padding20"
        android:paddingTop="@dimen/padding10"
        android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
        android:paddingEnd="@dimen/padding20"
        android:paddingBottom="@dimen/padding10"
        android:textSize="@dimen/size20text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextDocumento"
        android:imeOptions="actionNext"
        android:maxLines="1"
        android:inputType="textPostalAddress"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editTextTelefono"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding20"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="@dimen/padding20"
        android:background="@drawable/textinputborder"
        android:hint="@string/recapito_telefonico"
        android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
        android:paddingStart="@dimen/padding20"
        android:paddingTop="@dimen/padding10"
        android:paddingEnd="@dimen/padding20"
        android:paddingBottom="@dimen/padding10"
        android:textSize="@dimen/size20text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextIndirizzo"
        android:inputType="phone"/>

</androidx.constraintlayout.widget.ConstraintLayout>